Improve Advanced XML tasks

--- a/XmlTasks/Tests/out2.html
+++ b/XmlTasks/Tests/out2.html
@@ -1,4 +1,10 @@
 ﻿<html>
+  <head>
+    <META http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>
+          Stocks by genre
+        </title>
+  </head>
   <body>
     <h3>4/14/2017</h3>
     <table border="1">
